Routes: add router component

--- a/src/index.css
+++ b/src/index.css
@@ -70,7 +70,7 @@
 .menu {
     /*width: 25%;*/
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-start;
 }
 
 .menu .menu-items {
